@@ -47,6 +47,7 @@ Changes in 4.0.7
 * Developer: new plugin type '3' for admin-only plugins (0=public, 1=admin+public, 2=library)
 * Developer: fInput now uses htmlspecialchars on the value parameter (previously only escape_title)
 * Developer: pagelinkurl() calls a custom URL handler if present. NB: The custom URL handlers function signature is modified, as an additional flag discerns pagelinks from permlinks.
+* Developer: $txpcfg['ftindex_columns'] may contain an arrray of column names defining the fulltext-indexed set. A corresponding MySQL fulltext index must be established previously.
 * jQuery 1.2.6
 * Ability to connect to the MySQL server through SSL
 
